Fix WebApkIntegrationTests with network service on Android

These tests use MockCertVerifier, but due to the way WebApk activities
are launched, the setup is done before the network process is created,
and it would be very complicated to try to insert the MockCertVerifier
setup between when the network process is created and when the WebApk is
launched. Allowing the default_result for the MockCertVerifier to be set
with a flag lets the network process pick up the value when it gets
created.

Bug: 917467
Change-Id: I694247a189eacb5b4a290b9f78c9b6d60b689441
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1635198
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Clark DuVall <cduvall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#664333}

Former-commit-id: c813923e8fa8ff14e3b10a055b11213301f6ddf3